force-app/main/default/objects/Fatture__c/Fatture__c.object-meta.xml
<CustomObject>
    <label>Fattura</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Fattura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fatture</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>