force-app/main/default/objects/Fatture__c/fields/Data_Emissione__c.field-meta.xml
<CustomField>
    <fullName>Data_Emissione__c</fullName>
    <label>Data Emissione</label>
    <type>Date</type>
</CustomField>