force-app/main/default/objects/Fatture__c/fields/Data_Scadenza__c.field-meta.xml
<CustomField>
    <fullName>Data_Scadenza__c</fullName>
    <label>Data Scadenza</label>
    <type>Date</type>
</CustomField>