force-app/main/default/objects/Fatture__c/fields/Diplay_URL__c.field-meta.xml
<CustomField>
    <fullName>Diplay_URL__c</fullName>
    <label>Diplay URL</label>
    <type>Url</type>
</CustomField>