force-app/main/default/objects/Fatture__c/fields/Flusso_Fatture__c.field-meta.xml
<CustomField>
    <fullName>Flusso_Fatture__c</fullName>
    <label>Flusso Fatture</label>
    <referenceTo>Flusso_Fatture__c</referenceTo>
    <relationshipLabel>Fatture</relationshipLabel>
    <relationshipName>Fatture</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>