force-app/main/default/objects/Fatture__c/fields/Importo__c.field-meta.xml
<CustomField>
    <fullName>Importo__c</fullName>
    <label>Importo</label>
    <precision>11</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>