force-app/main/default/objects/Fatture__c/fields/Numero_Fattura__c.field-meta.xml
<CustomField>
    <fullName>Numero_Fattura__c</fullName>
    <externalId>true</externalId>
    <label>Numero Fattura</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>